--- a/QuickMaster2/src/main/resources/templates/ctrl/form.html
+++ b/QuickMaster2/src/main/resources/templates/ctrl/form.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="main">
-	<form th:action="@{/ctrl/form}" method="post">
+	<form th:action="@{/ctrl/form}" method="post" th:object="${memberForm}">
 		<div>
 			<label id="name">名前：</label><br>
-			<input id="name" name="name" type="text">
+			<input th:field="*{name}" type="text">
 		</div>
 		<div>
 			<label id="birth">生年月日：</label><br>
-			<input id="birth" name="birth" type="date">
+			<input th:field="*{birth}" type="date">
 		</div>
 		<div>
 			<label id="email">メールアドレス：</label><br>
-			<input id="email" name="email" type="email">
+			<input th:field="*{email}" type="email">
 		</div>
 		<input type="submit" value="保存">
 	</form>
