--- a/QuickMaster2/src/main/resources/templates/ctrl/form_result.html
+++ b/QuickMaster2/src/main/resources/templates/ctrl/form_result.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="main">
 	<ul>
-		<li>名前：[[${name}]]</li>
-		<li>誕生日：[[${birth}]]</li>
-		<li>メールアドレス：[[${email}]]</li>
+		<li>名前：[[${memberForm.name}]]</li>
+		<li>誕生日：[[${memberForm.birth}]]</li>
+		<li>メールアドレス：[[${memberForm.email}]]</li>
 	</ul>
 </div>
 </html>
