--- a/QuickMaster3/src/main/resources/templates/list.html
+++ b/QuickMaster3/src/main/resources/templates/list.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="main">
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<title>速習 Spring Boot</title>
+</head>
+<body>
+<div th:if="${success}" class="alert alert-success">[[${success}]]</div>
 <table class="table">
 <thead>
 <tr>
@@ -14,8 +21,12 @@
     <td>[[${#numbers.formatInteger(b.price, 3, 'COMMA')}]]円</td>
     <td>[[${b.publisher}]]</td>
     <td>[[${#temporals.format(b.published, 'yyyy年MM月dd日')}]]</td>
+    <td>
+        ［<a th:href="@{/crud/edit/{id}(id=${b.id})}">編集</a>］
+        ［<a th:href="@{/crud/show/{id}(id=${b.id})}">削除</a>］
+    </td>
 </tr>
 </tbody>
 </table>
-</div>
+</body>
 </html>
