--- a/QuickMaster3/src/main/resources/templates/crud/create.html
+++ b/QuickMaster3/src/main/resources/templates/crud/create.html
@@ -4,32 +4,38 @@
 	<form th:action="@{/crud/save}" method="post" th:object="${book}">
 		<div>
 			<label for="isbn">ISBNコード : </label><br>
-			<input type="text" th:field=*{isbn}>
+			<input type="text" th:field=*{isbn} th:errorclass="bg-warning">
+			<span th:errors="*{isbn}"></span>
 		</div>
 		<div>
 			<label for="title">書名 : </label><br>
-			<input type="text" th:field=*{title}>
+			<input type="text" th:field=*{title} th:errorclass="bg-warning">
+			<span th:errors="*{title}"></span>
 		</div>
 		<div>
 			<label for="price">価格 : </label><br>
-			<input type="text" th:field=*{price}>
+			<input type="text" th:field=*{price} th:errorclass="bg-warning">
+			<span th:errors="*{price}"></span>
 		</div>
 		<div>
 			<label for="publisher">出版社 : </label><br>
-			<input type="text" th:field=*{publisher}>
+			<input type="text" th:field=*{publisher} th:errorclass="bg-warning">
+			<span th:errors="*{publisher}"></span>
 		</div>
 		<div>
 			<label for="published">刊行日 : </label><br>
-			<input type="text" th:field=*{published}>
+			<input type="text" th:field=*{published} th:errorclass="bg-warning">
+			<span th:errors="*{published}"></span>
 		</div>
 		<div>
 			<label for="attach">付録 : </label><br>
-			<select th:field=*{attach}>
+			<select th:field=*{attach} th:errorclass="bg-warning">
 				<option value="">なし</option>
 				<option value="cd">CD</option>
 				<option value="dvd">DVD</option>
 				<option value="dl">ダウンロード</option>
 			</select>
+			<span th:errors="*{attach}"></span>
 		</div>
 		<input type="submit" value="保存">
 	</form>
